# mac2rpi_playback_server

./: .gitignore  CMakeLists.txt  README.md  SConstruct  server.cpp
script/: mac2rpi_playback_server.service
src/: CMakeLists.txt  SConscript  default_player.cpp  default_player.h  main.cpp  player.h  receiver.h  server.cc
src/server/: server.cc
test/: CMakeLists.txt  test.cpp
